--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node-sass": "4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader": "^2.4.7",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
