--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "react-google-login": "^5.1.22",
     "react-scripts": "3.0.0"
   },
   "resolutions": {
