--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "homepage": "https://sanyaslovo.github.io/react-ecommerse-homepage",
   "dependencies": {
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "node-sass": "4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loader": "^2.4.7",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "react-google-login": "^5.1.22",
