--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "redux": "^4.0.5"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "react-google-login": "^5.1.22",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "redux-persist": "^6.0.0"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
@@ -27,8 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
