--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": ".",
+  "start_url": "/react-ecommerce-homepage/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
